fix: update release-conda.yml for feedstock's meta.yaml -> recipe.yaml migration